# BTP_Project

./: .gitignore  FACULTY_DATA_MIGRATION_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  QUICK_START_TIMETABLE.md  QUICK_TEST_GUIDE.md  TABLE_HEADER_IMPROVEMENTS.md  TIMETABLE_GENERATION_IMPLEMENTATION.md  TIMETABLE_TESTING_CHECKLIST.md  UI_IMPROVEMENTS_SUMMARY.md
Backend/: .env  .env.backup  package-lock.json  package.json  server.js
Backend/Models/: Configuration.js  Courses.js  User.js
Backend/Routes/: auth.js  configurations.js  coureses.js  hod.js  timetable.js
Backend/Scheduling Algorithm/: CMakeLists.txt  timetable_solver.cpp
Backend/Scheduling Algorithm/.cache/clangd/index/: timetable_solver.cpp.872DB7E1D42FE9A3.idx
Backend/middleware/: auth.js
Backend/scripts/: FACULTY_SEEDING_README.md  addCCECourses.js  addCSECourses.js  addECECourses.js  addHSCCourses.js  addMATHCourses.js  addMMECourses.js  addPhysicsCourses.js  migrateFacultyData.js  seedConfigurations.js  seedFaculties.js  seedHOD.js  verifyFacultyBatchData.js  verifyHOD.js
Frontend/: api.js  index.html  package-lock.json  package.json
Frontend/src/: App.css  App.jsx  main.jsx
Frontend/src/Context/: CourseContext.jsx
Frontend/src/components/: AcademicsPage.css  AcademicsPage.jsx  ConfigurationsPage.css  ConfigurationsPage.jsx  HODPage.css  HODPage.jsx  Login.css  Login.jsx
